# arkio

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile-mcss  LICENSE  README.md  TODO  conf.py
docs/: CNAME  acceptor_8hpp.html  address_8hpp.html  annotated.html  ark_8hpp.html  async_8hpp.html  async__op_8hpp.html  async__syscall_8hpp.html  async_echo_server_8cpp-example.html  awaitable__op_8hpp.html  bindings_2bindings_8hpp.html  bindings_2coroutine_8hpp.html  bindings_8hpp.html  buffer_2buffer_8hpp.html  buffer_8hpp.html  callback_8hpp.html  classark_1_1async__context.html  classark_1_1base__buffer.html  classark_1_1context__exit__guard.html  classark_1_1event__fd.html  classark_1_1mem__fd.html  classark_1_1net_1_1address.html  classark_1_1net_1_1address__with__family.html  classark_1_1net_1_1inet6__address.html  classark_1_1net_1_1inet__address.html  classark_1_1net_1_1tcp_1_1acceptor.html  classark_1_1net_1_1tcp_1_1socket.html  classark_1_1nonseekable__fd.html  classark_1_1normal__file.html  classark_1_1pipe__fd.html  classark_1_1result.html  classark_1_1seekable__fd.html  classark_1_1task.html  classark_1_1with__async__context.html  clinux_8hpp.html  co__async_8hpp.html  completion__condition_8hpp.html  context_8hpp.html  context__exit__guard_8hpp.html  coro_cat_8cpp-example.html  (+81 more)
examples/: CMakeLists.txt  async_echo_server.cpp  async_tcp_client.cpp  coro_cat.cpp  coro_echo_server.cpp  coro_tcp_client.cpp  sync_cat.cpp  sync_echo_server.cpp  sync_tcp_client.cpp
include/: ark.hpp
include/ark/: async.hpp  bindings.hpp  buffer.hpp  clinux.hpp  coro_bindings.hpp  coroutine.hpp  general.hpp  io.hpp  net.hpp
include/ark/async/: async_op.hpp  callback.hpp  context.hpp
include/ark/async/io_uring/: async_syscall.hpp  context.hpp  io_uring.hpp
include/ark/bindings/: bindings.hpp  clinux.hpp  coroutine.hpp  doxygen_misc.hpp  ign_pipe.hpp
include/ark/buffer/: buffer.hpp  concepts.hpp  sequence.hpp  traits.hpp
include/ark/coroutine/: awaitable_op.hpp  co_async.hpp  fire_and_forget.hpp  task.hpp
include/ark/error/: ec_or.hpp
include/ark/general/: event_fd.hpp  mem_fd.hpp  normal_file.hpp  pipe_fd.hpp
include/ark/io/: async.hpp  completion_condition.hpp  concepts.hpp  coro.hpp  fd.hpp  iovecs.hpp  sync.hpp
include/ark/io/nonseekable/: async.hpp  nonseekable_fd.hpp  sync.hpp
include/ark/io/seekable/: async.hpp  coro.hpp  seekable_fd.hpp  sync.hpp
include/ark/misc/: concepts_polyfill.hpp  context_exit_guard.hpp  ign_pipe.hpp  manual_lifetime.hpp  test_r.hpp
include/ark/net/: address.hpp  tcp.hpp
include/ark/net/tcp/: acceptor.hpp  async.hpp  coro.hpp  general.hpp  socket.hpp  sync.hpp
include/iasr/: bindings.hpp  clinux.hpp  coro_bindings.hpp
include/iasr/async/: async_op.hpp  callback.hpp  context.hpp
include/iasr/async/io_uring/: async_syscall.hpp  context.hpp  io_uring.hpp
include/iasr/buffer/: buffer.hpp  buffer_view.hpp  sequence.hpp  traits.hpp
include/iasr/coroutine/: awaitable_op.hpp  co_async.hpp  fire_and_forget.hpp  task.hpp
include/iasr/error/: ec_or.hpp
include/iasr/general/: event_fd.hpp  mem_fd.hpp  normal_file.hpp  pipe_fd.hpp
include/iasr/io/: async.hpp  completion_condition.hpp  coro.hpp  event_fd.hpp  fd.hpp  iovecs.hpp  mem_fd.hpp  normal_file.hpp  stdio.hpp  sync.hpp
include/iasr/io/nonseekable/: async.hpp  nonseekable_fd.hpp  sync.hpp
include/iasr/io/seekable/: async.hpp  coro.hpp  seekable_fd.hpp  sync.hpp
include/iasr/misc/: ign_pipe.hpp  is_iterable.hpp  manual_lifetime.hpp
include/iasr/net/: address.hpp
include/iasr/net/tcp/: acceptor.hpp  async.hpp  coro.hpp  general.hpp  socket.hpp  sync.hpp
scripts/: generate_doc.sh
tests/: CMakeLists.txt  test_async.cpp  test_buffer.cpp  test_error.cpp  test_general.cpp  test_io_uring.cpp  test_net_address.cpp
tests/include/: test_r.hpp
